// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem renders with props 1`] = `
<a
  className="makeStyles-link-5"
  rel="noreferrer"
  target="_blank"
>
  <li
    className="MuiListItem-container"
  >
    <div
      className="MuiListItem-root makeStyles-listItem-3 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction"
      disabled={false}
    >
      <div
        className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiAvatar-fallback"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
        </div>
      </div>
      <div
        className="MuiListItemText-root makeStyles-listitemtext-6 MuiListItemText-multiline"
        style={
          Object {
            "textAlign": "justify",
            "width": "210px",
          }
        }
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            className="ellipsis"
          >
            abstract
          </div>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          <div
            style={
              Object {
                "display": "inline",
                "justifyContent": "space-between",
              }
            }
          >
            <div>
              byline
            </div>
            <div
              className="makeStyles-date-4"
              color="textPrimary"
              variant="body2"
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "width": "fit-content",
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"
                  />
                </svg>
                <div>
                  data
                </div>
              </div>
            </div>
          </div>
        </p>
      </div>
    </div>
    <div
      className="MuiListItemSecondaryAction-root"
      style={
        Object {
          "right": "0",
        }
      }
    >
      <button
        aria-label="comments"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </li>
</a>
`;

exports[`ListItem renders without props 1`] = `
<a
  className="makeStyles-link-5"
  rel="noreferrer"
  target="_blank"
>
  <li
    className="MuiListItem-container"
  >
    <div
      className="MuiListItem-root makeStyles-listItem-3 MuiListItem-gutters MuiListItem-alignItemsFlexStart MuiListItem-secondaryAction"
      disabled={false}
    >
      <div
        className="MuiListItemAvatar-root MuiListItemAvatar-alignItemsFlexStart"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiAvatar-fallback"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
        </div>
      </div>
      <div
        className="MuiListItemText-root makeStyles-listitemtext-6 MuiListItemText-multiline"
        style={
          Object {
            "textAlign": "justify",
            "width": "210px",
          }
        }
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            className="ellipsis"
          >
            NA
          </div>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          <div
            style={
              Object {
                "display": "inline",
                "justifyContent": "space-between",
              }
            }
          >
            <div />
            <div
              className="makeStyles-date-4"
              color="textPrimary"
              variant="body2"
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "width": "fit-content",
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"
                  />
                </svg>
                <div>
                  NA
                </div>
              </div>
            </div>
          </div>
        </p>
      </div>
    </div>
    <div
      className="MuiListItemSecondaryAction-root"
      style={
        Object {
          "right": "0",
        }
      }
    >
      <button
        aria-label="comments"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</a>
`;
